[package]
name = "rplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
audiotags = "0.5"
console_engine = {version = "2.4.0", features = ["event"]}
ctrlc = "3.2.2"
delegate = "0.13.1"
getset = "0.1.3"
rand = "0.8.5"
rodio = { version = "0.20", features = ["symphonia", "symphonia-all"] }
